# project-backlog-mcp-python

./: .env.example  .gitignore  COMPLETION_SUMMARY.md  Dockerfile  MCP_USAGE.md  OPTIMIZATION_REPORT.md  RAPPORT_TEST_MCP.md  README.md  TOOLS_COMPLETION_SUMMARY.md  docker-compose.yml  requirements.txt  test_mcp_tools.py  test_tools_count.py
Specs/: apigateway-hypermanager.yml
mcp_server/: client.py  main.py  (+3 more)
mcp_server/generated_client/: README.md  pyproject.toml
mcp_server/generated_client/hypermanager_ia_gemini_integration_client/: __init__.py
mcp_server/generated_client/hypermanager_ia_gemini_integration_client/api/default/: add_actor.py  add_child_feature.py  add_diagram.py  add_feature_to_story.py  add_project.py  add_story_to_actor.py  adopt_child_feature.py  delete_project.py  delete_story.py  get_all_project_actors.py  get_diagram.py  get_diagram_definition.py  get_list_diagrams.py  get_list_feature_types.py  get_list_projects.py  get_plant_url_diagram.py  get_png_diagram.py  get_project.py  get_project_features.py  get_project_stories.py  get_projects_tree.py  get_story.py  get_story_tree.py  normalize_tasks.py  refresh_feature_types.py  update_diagram.py  update_diagram_definition.py  update_diagram_graphic.py  update_project.py  update_story.py
mcp_server/generated_client/hypermanager_ia_gemini_integration_client/models/: __init__.py  add_actor_body.py  add_child_feature_body.py  add_diagram_body.py  add_feature_to_story_body.py  add_project_body.py  add_story_to_actor_body.py  update_diagram_body.py  update_project_body.py  update_story_body.py
(+23 files in other folders)
